# magika

./: .dockerignore  .gitattributes  .gitignore  .typos.toml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GUI_PR_SUMMARY.md  HOW_TO_SUBMIT_PR.md  PR_DESCRIPTION.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  cli-latest  dist-workspace.toml  output  pyproject.toml  pytest.ini
.gemini/: config.yaml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  scorecard.yml
.github /ISSUE_TEMPLATE/: misdetection.md
.github/workflows/: cli-latest.yml  (+43 more)
assets/: content_types_kb.min.json  magika-gui-screenshot.txt
assets_generation/: README.md  pyproject.toml
assets_generation/assets_generation/: generate_models_readmes.py  main.py  tfjs_config.py
docs/: GUI_DEVELOPMENT.md  GUI_QUICKSTART.md  GUI_WINDOWS.md  README.md  bindings.md  command_line_interface.md  concepts.md  dev-notes.md  faq.md  index.html  info.md  js.md  magika_output.md  output_format.md  package-lock.json  package.json  python.md  supported-content-types-list.md  supported_content_types_list.md  vite.config.js
go/: .gitignore  Makefile  README.md  go.mod  go.sum
js/: CHANGELOG.md  DOCS.md  README.md  index.js  index.ts  magika-cli.ts  magika-node.ts  magika.js  magika.ts  magika_node.ts  package-lock.json  package.json  postBuild.js  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
magician_ng/: __init__.py  content_types.py  magician.py
magika/: __init__.py  colors.py  content_types.py  logger.py  magika.py
magika-python-package/: README.md  mypy.ini  pyproject.toml
magika-python-package/magika/: __init__.py  colors.py  content_types.py  logger.py  magika.py  types.py
magika-python-package/magika/cli/: magika.py
magika-python-package/magika/config/: content_types_config.json
magika-python-package/magika/models/dense_v4_top_20230910/: model.onnx
magika-python-package/tests/: test_magika_python_cli.py  test_magika_python_module.py  utils.py
python/: .coverage  .gitignore  CHANGELOG.md  DOCS.md  Dockerfile  README.md  changelog.sh  da  magika-gui.py  mypy.ini  pyproject.toml  pytest.ini  tox.ini
python/.tox/py310/: .tox-info.json
python/.tox/py37/: .tox-info.json
python/.tox/py38/: .tox-info.json
python/magika/: __init__.py  content_types.py  logger.py  magika.py  prediction_mode.py  seekable.py  strenum.py  types.py
python/magika-core/: README.md  pyproject.toml
python/magika-core/src/magika/: __init__.py
python/magika/cli/: magika.py  magika_python_module_tester.py
python/magika/config/: content_types_config.json  content_types_kb.min.json  magika_config.json
python/magika/models/draft_begonly_v2/: config.min.json  model.onnx
python/magika/models/draft_fast_v2/: config.min.json  model.onnx
python/magika/models/draft_standard_v2/: config.min.json  model.onnx
python/magika/models/draft_v2/: model.onnx
python/magika/models/standard_v1/: thresholds.json
python/magika/models/standard_v2/: config.min.json
python/magika/types/: __init__.py  content_type_info.py  content_type_label.py  feedback_report.py  magika_result.py  model.py  status.py  statusor.py  strenum.py
python/scripts/: build_python_package.py  check_changelog.sh  check_copyright.py  check_copyright.sh  check_documentation.py  check_release_candidate_python_package.py  check_source.sh  extract_features.py  fix_package_version.py  generate_features_extraction_reference.py  generate_reference.py  magika_python_module_tester.py  pre_release_check.py  prepare_pyproject_for_pure_python_wheel.py  run_quick_test_magika_cli.py  run_quick_test_magika_module.py  sync.py  test_magika_model.py
python/src/magika/: __init__.py  colors.py  logger.py  magika.py  seekable.py
python/src/magika/cli/: magika_client.py  magika_rust_client_not_found_warning.py
python/src/magika/config/: content_types_kb.min.json
python/src/magika/gui/: __init__.py  magika_gui.py
python/src/magika/models/fast_v2_1/: model.onnx
python/src/magika/models/standard_v1/: model_output_overwrite_map.json
python/src/magika/models/standard_v2_1/: config.min.json
python/src/magika/models/standard_v3_0/: config.min.json  model.onnx
python/src/magika/models/standard_v3_1/: config.min.json
python/src/magika/models/standard_v3_3/: config.min.json  model.onnx
python/src/magika/types/: __init__.py  content_type_info.py  content_type_label.py  magika_error.py  magika_prediction.py  magika_result.py  model.py  overwrite_reason.py  prediction_mode.py  seekable.py  status.py  statusor.py  statusor_magika_result.py  strenum.py
python/tests/: test_features_extraction.py  test_features_extraction_against_reference.py  test_features_extraction_vs_reference.py  test_inference_vs_reference.py  test_magika_python_cli.py  test_magika_python_module.py  test_magika_python_windows.py  test_python_magika_client.py  test_python_module_tester.py  utils.py  utils_magika_python_client.py
rust/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  changelog.sh  color.sh  latest.sh  publish.sh  rustfmt.toml  sync.sh  taplo.toml  test-wheel.sh  test.sh
rust/cli/: CHANGELOG.md  Cargo.toml  README.md  output  publish.sh  test.sh
rust/cli/deb/: extended-description
rust/cli/src/: main.rs
rust/cli/tests/: broken_pipe.rs
rust/lib/: CHANGELOG.md  Cargo.toml  README.md  test.sh
rust/lib/src/: builder.rs  config.rs  content.rs  error.rs  file.rs  future.rs  input.rs  label.rs  lib.rs  model.onnx  model.rs  output.rs  session.rs
rust/onnx/: build.sh  maturin.sh
rust/src/: builder.rs  config.rs  error.rs  input.rs  lib.rs  main.rs  output.rs  session.rs
scripts/: check_pyproject_consistency.py
tests/: test_magika_cli.py  test_magika_module.py  test_magika_python_cli.py  test_magika_python_module.py  utils.py  utils_magika_python_client.py
tests_data/: README.md
tests_data/basic/cmake/: CMakeLists.txt
website/: README.md  index.html  package-lock.json  package.json  vite.config.js
website-ng/: .gcloudignore  README.md  app.yaml  astro.config.mjs  components.json  jsrepo.json  package-lock.json  package.json  svelte.config.js  tsconfig.json
(+346 files in other folders)
