[tool.poetry]
name = "magician-cli"
version = "0.1.0"
description = ""
authors = ["Yanick Fratantonio <yanickf@google.com>"]
readme = "README.md"
packages = [{include = "magician_ng"}]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
click = "^8.1.3"
rich = "^13.3.1"
python-dotenv = "^0.21.1"
tqdm = "^4.64.1"
onnxruntime = "^1.15.1"
requests = "^2.31.0"
numpy = "1.24.4"


[tool.poetry.scripts]
magician = "magician_ng.cli.magician:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
