[tool.poetry]
name = "magika"
version = "0.1.0"
description = "Development and testing environment for Magika."
authors = ["Yanick Fratantonio <yanickf@google.com>"]
readme = "README.md"
packages = [
  { include = "magika" },
]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
requests = "^2.28.2"
click = "^8.1.3"
tensorflow = "^2.11.0"
tqdm = "^4.64.1"
tabulate = "^0.9.0"
numpy = "^1.24.4"
pandas = "^1.5.3"
plotly = "^5.13.0"
matplotlib = "^3.7.0"
rich = "^13.7.0"
scikit-learn = "^1.2.1"
keras-nlp = "^0.4.0"
wandb = "0.15.3"
tensorflow-datasets = "^4.8.2"
semver = "^2.13.0"
tensorflow-addons = "^0.19.0"
ipywidgets = "^8.0.4"
python-dotenv = "^1.0.1"
redis = "^4.5.1"
ipython = "^8.10.0"
tensorflow-decision-forests = "^1.2.0"
google-api-python-client = "^2.79.0"
google-auth-httplib2 = "^0.1.0"
google-cloud-bigquery = "^3.5.0"
protobuf = "3.19.6"
grpcio-status = "1.48.2"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.4"
psycopg2-binary = "^2.9.5"
xgboost = "^1.7.4"
treelite = "^3.1.0"
treelite-runtime = "^3.1.0"
networkx = "^3.0"
google-cloud-storage = "^2.8.0"
onnxruntime = "^1.15.1"
tf2onnx = "^1.14.0"
ruff = "^0.2.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.7"
twine = "^4.0.2"
mypy = "^1.4.1"
pandas-stubs = "^2.0.2.230605"
types-redis = "^4.6.0.2"
types-requests = "^2.31.0.1"
types-tqdm = "^4.65.0.1"
pytest = "^7.4.0"

[tool.poetry.scripts]
dataset-manager = "magika.cli.dataset_manager:cli"
models-manager = "magika.cli.models_manager:cli"
tools-manager = "magika.cli.tools_manager:cli"
vt-hashes-processor = "magika.cli.vt_hashes_processor:cli"
vt-hashes-downloader = "magika.cli.vt_hashes_downloader:cli"
artifacts-manager = "magika.cli.artifacts_manager:cli"
evaluate-magician = "magika.cli.evaluate_magician:main"
data-manager = "magika.cli.data_manager:cli"
content-types-manager = "magika.cli.content_types_manager:cli"
package-manager = "magika.cli.package_manager:cli"
generate-cpp-data = "magika.cli.generate_cpp_data:main"
vt-client = "magika.cli.vt_client:cli"
magician-tester = "magika.cli.magician_tester:cli"
magika = "magika.cli.magika:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I001"]
ignore = []
