[project]
name = "magika"
description = "A tool to determine the content type of a file with deep learning"
authors = [
    {author = "Magika Developers", email = "magika-dev@google.com"},
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
dynamic = ["version"]

dependencies = [
    "click>=8.1.7",
    "onnxruntime>=1.19.0",
    "numpy>=1.24; python_version >= '3.8' and python_version < '3.9'",
    "numpy>=1.26; python_version >= '3.9' and python_version < '3.10'",
    "numpy>=2.1.0; python_version >= '3.10'",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]


[project.urls]
Homepage = "https://github.com/google/magika"
Documentation = "https://github.com/google/magika/blob/main/python/README.md"
Repository = "https://github.com/google/magika/blob/main/python/README.md"
Issues = "https://github.com/google/magika/issues"
Changelog = "https://github.com/google/magika/blob/main/python/CHANGELOG.md"


[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "ipython>=8.12.3; python_version >= '3.8' and python_version < '3.9'",
    "ipython>=8.18.1; python_version >= '3.9' and python_version < '3.10'",
    "ipython>=8.21.0; python_version >= '3.10'",
    "pytest>=8.3.2",
    "ruff>=0.6.3",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.hatch.version]
path = "src/magika/__init__.py"

[tool.maturin]
python-source = "src"
module-name = "magika"
bindings = "bin"
manifest-path = "../rust/cli/Cargo.toml"
locked = true
compatibility = "linux"
skip-auditwheel = true

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I001"]
ignore = []

[tool.ruff.format]
docstring-code-format = true
