[project]
name = "magika"
description = "A tool to determine the content type of a file with deep learning"
authors = [
    {author = "Magika Developers", email = "magika-dev@google.com"},
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
keywords = ["content type detection", "machine learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dynamic = ["version"]

dependencies = [
    "click>=8.1.7",
    "onnxruntime>=1.17.0,<1.20",
    "numpy>=1.24; python_version < '3.12'",
    "numpy>=1.26; python_version >= '3.12' and python_version < '3.13'",
    "numpy>=2.1.0; python_version >= '3.13'",
    "python-dotenv>=1.0.1",
]


[project.urls]
Homepage = "https://github.com/google/magika"
Documentation = "https://github.com/google/magika/blob/main/python/README.md"
Repository = "https://github.com/google/magika/"
Issues = "https://github.com/google/magika/issues"
Changelog = "https://github.com/google/magika/blob/main/python/CHANGELOG.md"


[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "ipython>=8.12.3",
    "pytest>=8.3.2",
    "ruff>=0.6.3",
    "twine>=5.1.1",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.hatch.version]
path = "src/magika/__init__.py"

[tool.maturin]
python-source = "src"
module-name = "magika"
bindings = "bin"
manifest-path = "../rust/cli/Cargo.toml"
locked = true

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I001"]
ignore = []

[tool.ruff.format]
docstring-code-format = true
