[package]
name = "magika"
# TODO(release): Remove -dev to release. But don't release before addressing all TODO(release) in
# the rust directory: `git grep 'TODO(release)' -- rust` to get a list from the root.
version = "0.1.0-dev"
authors = [
  "Yanick Fratantonio <yanickf@google.com>",
  "Julien Cretin <cretin@google.com>",
]
license = "Apache-2.0"
edition = "2021"
description = "A tool to determine the content type of a file with deep-learning"
repository = "https://github.com/google/magika"
homepage = "https://google.github.io/magika/"
keywords = ["cli", "file", "magic"]
categories = ["command-line-utilities", "filesystem", "parser-implementations"]

[package.metadata.docs.rs]
features = ["tokio"]
rustdoc-args = ["--cfg=docsrs"]

[[bin]]
name = "magika"
required-features = ["bin"]

[dependencies]
anyhow = { version = "1.0.80", optional = true }
async-channel = "2.2.0"
clap = { version = "4.5.1", features = ["derive"], optional = true }
futures = "0.3.30"
ndarray = "0.15.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["fs", "io-util"], optional = true }

[dependencies.ort]
version = "2.0.0-rc.0"
default-features = false
features = ["ndarray"]

[features]
tokio = ["dep:tokio"]
bin = ["dep:anyhow", "dep:clap", "tokio", "tokio/full", "ort/download-binaries"]
