[package]
name = "magika-cli"
version = "0.1.0-rc.3-dev"
authors = ["Magika Developers <magika-dev@google.com>"]
license = "Apache-2.0"
edition = "2021"
description = "Determines the content type of a file with deep-learning"
repository = "https://github.com/google/magika"
homepage = "https://google.github.io/magika/"
keywords = ["cli", "file", "magic"]
categories = ["command-line-utilities", "filesystem", "parser-implementations"]
include = ["/LICENSE", "/src"]

[[bin]]
name = "magika"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
async-channel = "2.3.1"
clap = { version = "4.5.9", features = ["cargo", "derive", "string"] }
colored = "2.1.0"
magika = { version = "=0.1.0-rc.3-dev", path = "../lib", features = ["serde"] }
num_cpus = "1.16.0"
ort = "=2.0.0-rc.9"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
