[package]
name = "magika"
version = "1.0.2-dev"
authors = ["Magika Developers <magika-dev@google.com>"]
license = "Apache-2.0"
edition = "2021"
description = "Determines file content types using AI"
repository = "https://github.com/google/magika"
homepage = "https://securityresearch.google/magika"
keywords = ["cli", "file", "magic"]
categories = ["command-line-utilities", "filesystem", "parser-implementations"]
include = ["/LICENSE", "/src"]

[dependencies]
anyhow = "1.0.86"
async-channel = "2.3.1"
clap = { version = "4.5.9", features = ["cargo", "derive", "string"] }
colored = "3.0.0"
magika_lib = { package = "magika", version = "=1.0.0", path = "../lib", features = ["serde"] }
num_cpus = "1.16.0"
ort = "=2.0.0-rc.10"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.43.1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true

[profile.dist]
inherits = "release"
