[package]
name = "magika"
version = "0.1.0-dev"
authors = ["Julien Cretin <cretin@google.com>", "Yanick Fratantonio <yanickf@google.com>"]
license = "Apache-2.0"
edition = "2021"
description = "Determines the content type of a file with deep-learning"
repository = "https://github.com/google/magika"
homepage = "https://google.github.io/magika/"
keywords = ["file", "magic"]
categories = ["command-line-utilities", "filesystem", "parser-implementations"]

[package.metadata.docs.rs]
features = ["_doc"]

[features]
serde = ["dep:serde"]
# Internal features.
_doc = ["serde"]
_test = ["ort/download-binaries"]

[dependencies]
ndarray = "0.15.1"
serde = { version = "1.0.197", features = ["derive"], optional = true }
thiserror = "1.0.57"
tokio = { version = "1.37.0", features = ["fs", "io-util"] }

[dependencies.ort]
version = "2.0.0-rc.2"
default-features = false
features = ["ndarray"]

[dev-dependencies]
data-encoding = "2.5.0"
flate2 = "1.0.28"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused = { level = "warn", priority = -1 }
