[package]
name = "magika"
version = "1.0.0-dev"
authors = ["Magika Developers <magika-dev@google.com>"]
license = "Apache-2.0"
edition = "2021"
description = "Determines file content types using AI"
repository = "https://github.com/google/magika"
homepage = "https://securityresearch.google/magika"
keywords = ["file", "magic"]
categories = ["command-line-utilities", "filesystem", "parser-implementations"]
include = ["/LICENSE", "/src"]

[package.metadata.docs.rs]
features = ["_doc"]

[features]
serde = ["dep:serde"]
# Internal features.
_doc = ["serde"]
_test = ["ort/download-binaries"]

[dependencies]
ndarray = "0.16.1"
serde = { version = "1.0.204", features = ["derive"], optional = true }
thiserror = "1.0.63"
tokio = { version = "1.43.1", features = ["fs", "io-util"] }

[dependencies.ort]
version = "=2.0.0-rc.10"
default-features = false
features = ["ndarray", "std"]

[dev-dependencies]
data-encoding = "2.6.0"
flate2 = "1.0.30"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused = { level = "warn", priority = -1 }
